--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-numpy 1.23.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
@@ -9,6 +8,7 @@ Jinja2==2.11.2
 joblib==0.15.1
 jsonify==0.5
 MarkupSafe==1.1.1
+numpy==1.20.3
 requests==2.24.0
 scikit-learn==0.23.1
 scipy==1.5.0
